formulario de contato

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
 usuario.username=Usu\u00e1rio
 usuario.nome=Nome
 usuario.senha=Senha
+
+contato.nome=Nome
+contato.telefone=Telefone
+vinho.enderecor=Endereço
