--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,4 +4,6 @@ usuario.senha=Senha
 
 contato.nome=Nome
 contato.telefone=Telefone
-vinho.enderecor=Endereço
+contato.endereco=Endereço
+
+tarefa.titulo=T\u00edtulo
